frontend/test/should_fail/exectype_AssignMapAccessToVar4.grg
using exectype;

rule r
{
	modify  {
		exec(m:map<int,HH> =map<int,HH> ;> a:string=varia && {h:H=m[a]}); // a must be int, not string
	}
}